# backend/app/controllers/employments_controller.rb
@@ -63,6 +63,12 @@ class EmploymentsController < ApplicationController
   end
 
   def employment_params
-    params.require(:employment).permit(:position_id, :start_date, :end_date)
+    params.require(:employment).permit(
+      :position_id, :start_date, :end_date,
+      position_attributes: [
+        :id, :title, :description, :remote,
+        company_attributes: [:id, :name, :description]
+      ]
+    )
   end
 end
